<resources>
    <string name="app_name">My Great Notes</string>
    <string name="app_name_full">My Terrible Notes</string>
    <string name="sometext">Некоторый текст</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_back">назад</string>
    <string name="button_date_and_time">Установить время и дату</string>
    <string name="button_date">Установить дату</string>
    <string name="button_time">Установить время</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_sort">Сортировать</string>
    <string name="menu_del">Удалить</string>
    <string name="menu_edit">Редактировать</string>
    <string name="select_user">Смена пользователя</string>
    <string name="settings">Настройки</string>
    <string name="option_select_list">К списку</string>
    <string name="button_save">Сохранить</string>
    <string name="settings_on_fragments">Здесь находится меню настройки. Скоро здесь будет чисто и красиво :)</string>
    <string name="auth_on_fragments">Войдите в приложение, используя аккаунт Google</string>
    <string name="auth_on_fragments_VK">... или используя ВКонтакте</string>
    <string name="auth_on_VK">Войти ВК</string>
    />
</resources>