<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.NoteFullFragment">

    <TextView
        android:id="@+id/header_det_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:gravity="center"
        android:padding="@dimen/note_item_margin"
        tools:text="@string/sometext" />

    <TextView
        android:id="@+id/text_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:padding="@dimen/note_item_margin"
        tools:text="@string/sometext" />

    <TextView
        android:id="@+id/date_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:gravity="right"
        android:padding="@dimen/note_item_margin"
        tools:text="@string/sometext" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_date"
        android:layout_margin="@dimen/button_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_time"
        android:layout_margin="@dimen/button_margin"/>

</LinearLayout>